--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -23,7 +23,7 @@ a,
 }
 
 @media (min-width: 1024px) {
-  /*body {
+  body {
     display: flex;
     place-items: center;
   }
@@ -32,5 +32,5 @@ a,
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }*/
+  }
 }
